# corrosion-protection-system-calculation

./: 19285-2026.json  1st_step.py  README.md  lesson.py  main.py  pyproject.toml
core/: calculator.py  models.py
ui/: dialogs.py  latex_renderer.py  main_window.py
