[project]
name = "script-for-19285"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.63.0",
    "kiwisolver==1.5.0",
    "matplotlib==3.10.9",
    "numpy==2.4.6",
    "packaging==26.2",
    "pillow==12.2.0",
    "pyparsing==3.3.2",
    "pyside6==6.11.1",
    "pyside6-addons==6.11.1",
    "pyside6-essentials==6.11.1",
    "python-dateutil==2.9.0.post0",
    "shiboken6==6.11.1",
    "six==1.17.0",
]
